# logos-logoscore-cli

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  flake.nix  test_basic_module_plugin.dylib
.github/workflows/: appimage.yml  ci.yml  doctests.yml  release-appimage.yml  release.yml
assets/: logoscore.desktop
assets/macos/: Info.plist.in
ci/: Jenkinsfile  macos.Jenkinsfile
docs/: project.md  spec.md
doctests/: fullapi-chain.test.yaml  logoscore-concurrent-blocking.test.yaml  logoscore-daemon.test.yaml  logoscore-system-service.test.yaml  logoscore-transports.test.yaml  run.sh
doctests/outputs/: logoscore-concurrent-blocking.md  logoscore-daemon.md  logoscore-transports.md
main/: index.html
main/macos-latest/: index.html
main/ubuntu-latest/: index.html
nix/: build-info.nix
pr-36/: index.html
pr-36/macos-latest/: index.html
pr-36/ubuntu-latest/: index.html
pr-37/: index.html
pr-37/macos-latest/: index.html
pr-37/ubuntu-latest/: index.html
pr-38/: index.html
pr-38/macos-latest/: index.html
pr-38/ubuntu-latest/: index.html
pr-39/: index.html
pr-39/macos-latest/: index.html
pr-39/ubuntu-latest/: index.html
pr-40/: index.html
pr-40/macos-latest/: index.html
pr-40/ubuntu-latest/: index.html
pr-41/: index.html
pr-41/macos-latest/: index.html
pr-41/ubuntu-latest/: index.html
pr-42/: index.html
pr-42/macos-latest/: index.html
pr-42/ubuntu-latest/: index.html
pr-43/: index.html
pr-43/macos-latest/: index.html
pr-43/ubuntu-latest/: index.html
pr-44/: index.html
pr-44/macos-latest/: index.html
pr-44/ubuntu-latest/: index.html
pr-45/: index.html
pr-45/macos-latest/: index.html
pr-45/ubuntu-latest/: index.html
pr-46/: index.html
pr-46/macos-latest/: index.html
pr-46/ubuntu-latest/: index.html
pr-47/: index.html
pr-47/macos-latest/: index.html
pr-47/ubuntu-latest/: index.html
pr-48/: index.html
pr-48/macos-latest/: index.html
pr-48/ubuntu-latest/: index.html
pr-49/: index.html
pr-49/macos-latest/: index.html
pr-49/ubuntu-latest/: index.html
pr-50/: index.html
pr-50/macos-latest/: index.html
pr-50/ubuntu-latest/: index.html
pr-51/: index.html
pr-51/macos-latest/: index.html
pr-51/ubuntu-latest/: index.html
pr-54/: index.html
pr-54/macos-latest/: index.html
pr-54/ubuntu-latest/: index.html
pr-55/: index.html
pr-55/macos-latest/: index.html
pr-55/ubuntu-latest/: index.html
pr-56/: index.html
pr-56/macos-latest/: index.html
pr-56/ubuntu-latest/: index.html
pr-57/: index.html
pr-57/macos-latest/: index.html
pr-57/ubuntu-latest/: index.html
pr-58/: index.html
pr-58/macos-latest/: index.html
pr-58/ubuntu-latest/: index.html
pr-60/: index.html
pr-60/macos-latest/: index.html
pr-60/ubuntu-latest/: index.html
pr-61/: index.html
pr-61/macos-latest/: index.html
pr-61/ubuntu-latest/: index.html
pr-63/: index.html
pr-63/macos-latest/: index.html
pr-63/ubuntu-latest/: index.html
pr-64/: index.html
pr-64/macos-latest/: index.html
pr-64/ubuntu-latest/: index.html
pr-65/: index.html
pr-65/macos-latest/: index.html
pr-65/ubuntu-latest/: index.html
pr-66/: index.html
pr-66/macos-latest/: index.html
pr-66/ubuntu-latest/: index.html
pr-67/: index.html
pr-67/macos-latest/: index.html
pr-67/ubuntu-latest/: index.html
pr-68/: index.html
pr-68/macos-latest/: index.html
pr-68/ubuntu-latest/: index.html
pr-69/: index.html
pr-69/macos-latest/: index.html
pr-69/ubuntu-latest/: index.html
pr-70/: index.html
pr-70/macos-latest/: index.html
pr-70/ubuntu-latest/: index.html
pr-71/: index.html
pr-71/macos-latest/: index.html
pr-71/ubuntu-latest/: index.html
pr-72/: index.html
pr-72/macos-latest/: index.html
pr-72/ubuntu-latest/: index.html
pr-73/: index.html
pr-73/macos-latest/: index.html
pr-73/ubuntu-latest/: index.html
scripts/: create-tarball.sh  sign-and-notarize.sh
src/: command_line_parser.cpp  config.cpp  config.h  main.cpp  paths.cpp  paths.h  string_utils.h  version_info.h
src/client/: client.cpp  client.h  client_connection.cpp  client_connection.h  client_state.cpp  client_state.h  core_manager_api.cpp  core_manager_api.h  logos_sdk.cpp  logos_sdk.h  output.cpp  output.h
src/client/commands/: call_command.cpp  call_command.h  command.cpp  command.h  issue_token_command.cpp  issue_token_command.h  list_modules_command.cpp  list_modules_command.h  list_tokens_command.cpp  list_tokens_command.h  load_module_command.cpp  load_module_command.h  module_info_command.cpp  module_info_command.h  reload_module_command.cpp  reload_module_command.h  revoke_token_command.cpp  revoke_token_command.h  stats_command.cpp  stats_command.h  status_command.cpp  status_command.h  stop_command.cpp  stop_command.h  unload_module_command.cpp  unload_module_command.h  watch_command.cpp  watch_command.h
src/core_service/: core_service_dispatch.cpp  core_service_impl.cpp  core_service_impl.h  core_service_loader.h  metadata.json
src/daemon/: connection_file.cpp  connection_file.h  daemon.cpp  daemon.h  daemon_state.cpp  daemon_state.h  port_allocator.cpp  port_allocator.h  token_store.cpp  token_store.h
src/inline/: call_executor.cpp  call_executor.h  command_line_parser.cpp  command_line_parser.h
src/platform/: event_loop.cpp  event_loop.h
tests/: CMakeLists.txt  test_cli.cpp  test_client_connection.cpp  test_commands.cpp  test_config.cpp  test_connection_file.cpp  test_daemon_state.cpp  test_integration.cpp  test_mode_detection.cpp  test_output.cpp  test_port_allocator.cpp  test_token_store.cpp
